k8s/auth/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-system
  labels:
    name: auth-system
    istio-injection: enabled
